# jcode

./: .aider.chat.history.md  .gitignore  AGENTS.md  Cargo.toml  PARITY.md  PLAN_PARITY.md  README.md  REMAINING.md  flake.nix  libjcode_base.rlib  rust-toolchain.toml
.beads/: issues.jsonl
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
.jcode/agents/: basher.toml  code-reviewer.toml  editor.toml  file-picker.toml  planner.toml
.jcode/state/: modes.toml
.omo/: ralph-loop.local.md
crates/jcode-provider-anthropic/: Cargo.toml
crates/jcode-provider-anthropic/src/: lib.rs
crates/jcode-provider-service/: Cargo.toml  README.md
crates/jcode-provider-service/src/: aliases.rs  boot.rs  callback_server.rs  catalog.rs  credential.rs  credential_rotation.rs  defaults.rs  expiry.rs  failover.rs  hooks.rs  idle_stream.rs  integration.rs  inventory.rs  lib.rs  metadata_profiles.rs  migrate.rs  model_prefs.rs  policy.rs  refresh.rs  registry.rs  retrofit.rs  retry_after.rs  runtime.rs  scrub.rs  service.rs  tui_picker.rs
crates/jcode-provider-service/src/store/: integration.rs  keyring.rs  service.rs
crates/jcode-provider-service/tests/: integration.rs
docs/: COMPILE_PERFORMANCE_PLAN.md  plugin-hardening-v2.md  plugin-threat-model.md  plugins.md
scripts/: code_size_budget.json  panic_budget.json  rebuild.sh  swallowed_error_budget.json  test_size_budget.json
src/: agent.rs  floating_diagram.rs  lib.rs  main.rs  provider_catalog_tests.rs  replay.rs  skill_distillation.rs  video_export.rs
src/cli/: acp.rs  args.rs  (+14 more)
tests/: hooks_integration.rs
(+549 files in other folders)
