[package]
name = "jcode-provider-anthropic"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
jcode-llm-core = { version = "0.1.0", path = "../jcode-llm-core" }
jcode-llm-protocols = { path = "../jcode-llm-protocols" }
jcode-logging = { path = "../jcode-logging" }
jcode-message-types = { path = "../jcode-message-types" }
jcode-provider-core = { path = "../jcode-provider-core" }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
